components/sysBoot/bootTerminal.css
@import "../../css/main/root.css";

#terminal {
    background-color: var(--terminal-bg);
    font-family: var(--font-family);
    color: var(--terminal);
    line-height: 1.6rem;
    position: fixed;
    inset: 0;
    z-index: 9000;
    padding: 15vh 15vw;
    transition: all ease-out 0.5s;
}

.exit {
    opacity: 0;
}

.loading-started {
    width: 100%;
    height: 100%;
    overflow: scroll;
    scrollbar-width: none;
}

.loading-started::after {
  content: "_";
  margin-left: 4px;
  animation: blink 1s steps(1) infinite;
}

.loading-complete {
    width: 100%;
    height: 100%;
    overflow: scroll;
    scrollbar-width: none;
}

.loading-complete::after {
    content: none;
}

#skip {
    position: fixed;
    bottom: 10px;
    left: 10px;
    animation: blink 1s steps(1) infinite;
    cursor: pointer;
}

@keyframes blink {
    50% {
        opacity: 0.5;
    }
}

.blink {
    animation: blink 1s steps(1) infinite;
}

@media (max-width: 720px) {
    #terminal {
        padding: 20px;
    }
}

